Pete's comments (final part)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7283,7 +7283,7 @@ specification and \cite{Seidewitz08}.
 \section{Preliminaries}
 
 \cbs The axioms for primitive types
-are inherited from the fUML specification, section 10.3.1:\cbe
+are imported from the fUML specification, section 10.3.1:\cbe
 Booleans, numbers, sequences and strings.  These
 axiomatize (among others) predicates corresponding to primitive types,
 e.g.\ \texttt{buml:Boolean}, \texttt{form:Number},
@@ -8297,7 +8297,7 @@ are those whose conformance with \DOL is established in the preceding annexes (O
 % languages, also a specification language is included, namely the
 % Common Algebraic Specification Language (CASL).
  The list of
-language translations, given below, comprises standard translations from the literature,
+language translations, given below, comprises standard translations from the literature  \cite{OntoGraph,MossakowskiEtAl14b},
 as well as further translations that are considered useful for
 logical interoperability:
 \begin{itemize}
@@ -8695,8 +8695,8 @@ in this direction.
   \label{fig:pre-ontograph}
 \end{figure}
 This annex extends the graph of logics and translations given in
-\aref{a:graph} by a list of OMS language whose conformance with
-\DOL will be established through the registry.  The graph is shown in
+\aref{a:graph} by a list of OMS languages \cbs whose inclusion in
+the registry is planned\cbe.  The graph is shown in
 \fref{fig:pre-ontograph}.  Its nodes are included in the following
 list of OMS languages and profiles (in addition to those
 mentioned in \aref{a:graph}):
