--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -809,3 +809,24 @@ YEAR = 1990}
   year={2012},
   publisher={Springer}
 }
+
+@TechReport{w3c:owl2-direct-semantics,
+  author =   {Boris Motik and Peter F. Patel-Schneider and Cuenca Grau, Bernardo},
+  title =    {{OWL} 2 Web Ontology Language: Direct Semantics},
+  type = {{W3C} Recommendation},
+  institution = {World Wide Web Consortium ({W3C})},
+  url = {http://www.w3.org/TR/2009/REC-owl2-direct-semantics-20091027/},
+  year =     2009,
+  month = oct,
+  date = {2009-10-27}}
+
+@TechReport{w3c:owl2-spec,
+  author =   {Boris Motik and Peter F. Patel-Schneider and Bijan Parsia},
+  title =    {{OWL} 2 Web Ontology Language: Structural Specification and Functional-Style Syntax},
+  type = {{W3C} Recommendation},
+  institution = {World Wide Web Consortium ({W3C})},
+  url = {http://www.w3.org/TR/2009/REC-owl2-syntax-20091027/},
+  year =     2009,
+  month = oct,
+  date = {2009-10-27}}
+
