--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2524,7 +2524,7 @@ to a language by mapping \termref{abstract syntax} to suitable
 can represent the intended meanings of language constructs.}
 
 \termdefinition{semantic rule}{specification of a mapping from
-\termref{abstract syntax} to a \termred{semantic domain}.}
+\termref{abstract syntax} to a \termref{semantic domain}.}
 
 \termdefinition{global environment}{mapping from identifiers (IRIs)
 to values in \termref{semantics domains} representing the
@@ -3798,8 +3798,13 @@ The major functions of \DOL are the following:
 		 defined in \cref{c:semantics}.  
 \end{itemize}
  
-The syntax of \DOL roughly follows these functions; native OMS, the various kind of structured OMS, OMS mappings, and OMS networks are the most important \cbs metaclasses \cbe  of \DOL. 
-They (together with importations) form the items in a \emph{\DOL library}.
+\cbs Each of these functions corresponds to a syntactic category in \DOL: native OMS, structured
+ OMS, OMS mappings, and OMS networks. They (together with importations) form the items in a
+\emph{\DOL library}, and are, in this sense, the most important metaclasses of \DOL. 
+%The syntax of \DOL roughly follows these functions.
+%Native OMS, the various kind of structured OMS, OMS mappings, and OMS networks are the most important metaclasses   of \DOL. 
+\cbs
+
  
 
 
@@ -4009,7 +4014,7 @@ the rule for \syntax{combination} for the \cbs MOF metaclass \cbe
 \clause{\DOL Abstract Syntax}\label{c:abstract-syntax}
 
 \cbs
-The clause specifies the \DOL abstract syntax as a MOF metamodel.
+This clause specifies the \DOL abstract syntax as a MOF metamodel.
 In annex~\ref{a:EBNF}, the same abstract syntax is specified using EBNF.
 Clause~\ref{a:text-syntax} provides the \DOL concrete syntax, which
 uses the metaclasses of the abstract syntax as non-terminals of
@@ -4018,7 +4023,7 @@ an EBNF grammar.
 
 \sclause{MOF Metaclasses}
 
-\DOL provides \cbs MOF metaclasses \cbe  for
+\DOL provides\cbs MOF metaclasses\cbe  for
 \begin{itemize}
 \item OMS (which can be native OMS in some OMS language, or unions, translations, \cbs closures\cbe, combinations, approximations of OMS, among others)
 \item OMS mappings 
@@ -4037,7 +4042,7 @@ If a conforming OMS language has a metaclass for basic OMS,
 this is a subclass of the metaclass \syntax{BasicOMS}.\cbe
 
 \cbs The following subclauses, one per MOF metaclass, specify the abstract syntax of \DOL in MOF. Additionally, an informative EBNF specification
-is given in appendix~ref\cbe{a:EBNF}.\cbe
+is given in appendix~\ref{a:EBNF}.\cbe
 
 
 \sclause{Documents}\label{c:libraries}
