--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1739,6 +1739,9 @@ collection of expressions (like non-logical symbols\index{non-logical symbol}, s
 	An \termref{OMS} can be written in different \termref{OMS language} 	\termref{serializations}\index{serialization}.
 	\end{note}	
 
+\cbs
+\termdefinition{native document}{document containing a \termref{native OMS}.}
+\cbe
 
 \termdefinition{OMS language}{language equipped with a formal, declarative, logic-based semantics,
 plus non-logical annotations\index{annotation}.}
@@ -1757,7 +1760,7 @@ plus non-logical annotations\index{annotation}.}
 %\begin{definitions}
 \termdefinition{\DOL structured OMS}{syntactically valid \DOL library (as defined in this \IS) that contains a library definition (see section \ref{c:keywords}).}
   \begin{note}
-   \DOL structured OMS, typically, use native OMS as building blocks for defining other structured OMS, OMS mappings or OMS networks.  
+   \DOL structured OMS, typically, use basic OMS as building blocks for defining other structured OMS, OMS mappings or OMS networks.  
   \end{note}
   \begin{note}
    All \DOL structured OMS are structured OMS. 
@@ -1766,9 +1769,11 @@ plus non-logical annotations\index{annotation}.}
 
 
 \termdefinitionLight{OMS (ontology, specification or model)\index{OMS}}
-{native OMS or a \DOL structured OMS.}
+{basic OMS or structured OMS.}
 \begin{note}
-	An OMS is either a basic or a structured OMS.
+\cbs
+	An OMS is either a basic OMS (which is always a native OMS, and can occur as a text fragment in a \DOL document) or a structured OMS (which can be either a native structured OMS contained in some native document, or a \DOL structured OMS contained in a \DOL document).
+\cbe
 \end{note}
 \begin{note}
 	An OMS has a single signature and model class over that signature as its model-theoretic semantics.
@@ -1782,7 +1787,7 @@ plus non-logical annotations\index{annotation}.}
     Basic OMS are self-contained in the sense that\cbs their\cbe semantics does not depend on some other OMS.  In particular,\cbs a basic\cbe OMS does not involve any importations.
   \end{note}
   \begin{note}
-    Since a basic OMS has no structuring elements, it consists just of a \termref{signature} equipped with a set of sentences\index{sentence} and annotations\index{annotation}.
+    Since a basic OMS has no structuring elements, it consists of \cbs (or at least denotes)\cbe{} a \termref{signature} equipped with a set of sentences\index{sentence} and annotations\index{annotation}.
   \end{note}
 	
 
@@ -3784,7 +3789,7 @@ language', but a meta-language that is used on top of existing OMS languages.
 The major functions of \DOL are the following: 
 \begin{itemize}
 		\item \DOL allows the use of OMS in other OMS languages (e.g., UML class diagrams, \CASL, 
-		OWL, Common Logic) without requiring any changes. These are called \emph{native OMS}.  
+		OWL, Common Logic) without requiring any changes. These are called \emph{native OMS}. \cbs A native OMS is serialized in a \emph{native document}. \cbe  
 		\item \DOL provides for defining new, \emph{structured OMS} based on existing OMS.\footnote{Native OMS can also use the structuring constructs from their OMS language. However, these structuring constructs are often quite limited, and moreover, they differ from OMS language to OMS language.} \DOL provides a number of operations for this purpose; e.g.,
 		it is possible to define a structured OMS $C$ as the union of an OWL
 		ontology $A$ and a Common Logic ontology $B$.
