finalise terry's comments

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2068,7 +2068,7 @@ original and the renamed OMS.
 
 \cbs
 \termdefinition{local environment}{OMS built from all previously-declared 
-symbols and axioms}
+symbols and axioms.}
 \cbe
 
 \termdefinition{extension}{\termref{OMS} whose sets of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} are supersets of those present in \cbs the \termref{local environment}.\cbe}
@@ -4113,7 +4113,7 @@ some non-logical symbols are hidden, but the semantic effect of sentences involv
 \item an OMS qualified with the OMS language that is used to express it,
 \item a combination of (the OMS contained in) an OMS network (technically, this is a colimit, see \cite{ZimmermanEtAl06}),
 \item a \cbs closure\cbe of an OMS, forcing the subsequently declared
-  non-logical symbols to be interpreted in a minimal \cbs or maximal\cbe{} way, while the non-logical symbols declared \cbs in the local environment\cbe{} are fixed (alternatively, the non-logical symbols to be \cbs minimized/maximized\cbe{} and to be varied can be explicitly declared). Variants of \cbs closure are minimization, \cbe{}
+  non-logical symbols to be interpreted in a minimal \cbs or maximal\cbe{} way, while the non-logical symbols declared \cbs in the local environment\cbe{} are fixed (alternatively, the non-logical symbols to be \cbs minimized/maximized\cbe{} and to be varied can be explicitly declared). Variants of\cbs closure are minimization,\cbe{}
 maximization, freeness (minimizing also data sets and equalities on these, \cbs which enables the inductive definition of relations and datatypes), and cofreeness
 (enabling the coinductive definition of relations and datatypes).\cbe
 %\item the application of a substitution to an OMS.
@@ -4123,7 +4123,7 @@ maximization, freeness (minimizing also data sets and equalities on these, \cbs 
 
 \cbs
 Some OMS, namely extensions and \cbs closures\cbe{}, are interpreted relative to a \emph{local environment}.
-Roughly speaking, the local environment is the OMS built from all
+The local environment is the OMS built from all
 previously-declared symbols and axioms.
 
 A \syntax{ConservativityStrength} specifies additional relations that may hold
@@ -4923,7 +4923,7 @@ domain.
 \sclause{Theoretical Foundations of the \DOL Semantics}
 \label{s:foundations}
 
-\cbs In the following the theoretical foundations of the semantics of \DOL is specified.\cbe
+\cbs In the following the theoretical foundations of the semantics of \DOL are  specified.\cbe
 The notions of \emph{institution} and institution 
 \emph{comorphism} and \emph{morphism} are introduced, which provide formalizations of the terms 
 \termref{logic}, respectively \termref{logic translation}, respectively  \termref{logic reduction}. 
@@ -7296,8 +7296,12 @@ e.g.\ \texttt{buml:Boolean}, \texttt{form:Number},
 \texttt{form:Sequence}, \texttt{form:Character}, and
 \texttt{buml:String}.
 
-\cbs In the following a number of predicates are axiomatized  in Common Logic\cbe
-(note that enumerations are not axiomatized in fUML):
+\cbs
+The following infrastructure, consisting off a number of predicates axiomatized in Common Logic,
+provides a foundation for an institution for UML class diagrams described in the later sections of
+this Annex. 
+\cbe
+
 \begin{lstlisting}[language=clif,morekeywords={then,with,logic,oms,end},mathescape]
 logic CLIF
 
@@ -7585,8 +7589,6 @@ end
 
 \end{lstlisting}
 
-\cbs This infrastructure provides a foundation for an institution for UML class
-diagrams, as described in the following sections.\cbe
 
 \section{Signatures}
 
@@ -7787,7 +7789,7 @@ morphisms form the category of \emph{class/data type nets}, denoted by
 $\mathrm{Cl}$.
 
 \medskip
-\cbs For the example in Fig. \ref{fig:bjoerners_dsl} the class/data type net is\cbe
+\cbs For the example in Fig. \ref{fig:bjoerners_dsl} the class/data type net is\cbe 
 %
 \begin{gather*}
   \text{Classes/data types: }\mathsf{Net}, \mathsf{Station}, \mathsf{Line}, \mathsf{Connector}, \mathsf{Unit}, \mathsf{Track}, \mathsf{Point}, \mathsf{Linear},
@@ -8115,8 +8117,11 @@ names.
   \mathsf{\#l2l(line : Set[Line], linear : Set[Linear]).linear = 1}
 \end{gather*}
 %
-\cbs ``$=$'' and ``${-} \leq {-} \leq {-}$'' are 
-abbreviations for two inequations using ``$\leq$''.\cbe
+\cbs ``$x = y$'' is an  
+abbreviation for the two inequations ``$x\leq y$'' and ``$y\leq x$''.
+``$x \leq y \leq z$'' is an abbreviation for the two  inequations 
+``$x\leq y$'' and ``$y\leq z$''.
+\cbe
 \end{example}
 
 
@@ -8193,7 +8198,7 @@ to an integer, and $[x_1\cdots x_n]$ abbreviates \texttt{(form:sequence-insert $
 The translation for  $\mathit{FunExpr} \leq \mathit{NumLiteral}$
 is analogous. In case of simplified representation,\cbs
 the existence of $\sem{\ell}$ distinct individuals 
-needs  to replaced\cbe
+would be replaced\cbe
 with a statement
 expressing that if $\sem{\ell}+1$ individuals have the specified property,
 at least two of them must be equal.
@@ -8223,7 +8228,7 @@ set of sorts $\{s\}$ is isomorphic to unsorted first-order logic.
 partial functions and subsorting.  It also provides induction
 sentences, expressing the (free) generation of datatypes.  \CASL has
 been presented as an institution in \cite{Mossakowski02,CASL-RM}.\cbs This annex presents
- only a sketch of this institution.\cbe
+a sketch of this institution.\cbe
 
 \CASL signatures consist of a set $S$ of sorts with a subsort relation $\leq$ between them
 together with
@@ -8684,7 +8689,7 @@ The ontology is extended by translating parts of this net and its multiplicity c
 A formal representation of language and logic translations still needs
 to be developed. For the syntax aspects of these translations, QVT
 could be a useful option. However, it would have added value to choose
-a representation of translations that allows the their correctness
+a representation of translations that allows  their correctness
 to be proven easily. Such a representation would have to interact
 with suitable representations of languages and logics in a 
 logical framework. See \cite{CodescuEtAl2011d} for some work
@@ -8736,7 +8741,7 @@ The actual translations are specified in \cite{OntoGraph}.
 
 \cbs
 The following subclauses specify the abstract syntax of \DOL in EBNF. Note that it deviates from the EBNF specification in
- \nisref{ISO/IEC 14977:1996} in favor of a more modern and concise
+ \nisref{ISO/IEC 14977:1996} in favor of a more concise
 EBNF syntax. More precisely, \nisref{ISO/IEC 14977:1996} requires commas between the (non-)terminals of a right-hand side, which are omitted 
 for the sake of better readability. Also, the separator \syntax{=}
 between left and right hand-side of a rule is replaced with \syntax{::=}, and 
@@ -9124,7 +9129,7 @@ elided, and left for a later version of \DOL.
 \infannex{Example Uses of all \DOL Constructs}\label{a:uses}
 \cbs
 This annex provides example uses of \DOL constructs.  Jointly with
-\cref{c:goal}, which already contains \DOL examples for the
+\cref{c:goal}, which  contains \DOL examples for the
 usage scenarios, all \DOL constructs (although not necessarily all
 variants of each construct) are covered.  The examples follow the \DOL
 Text Serialization (\cref{a:text-syntax}). The following table
@@ -10263,7 +10268,7 @@ but will be supported.
 
 \section{Specification}
 
-\cbs A qualified loc/id IRIs can be specified\cbe as a special case of RFC 3987 (IRI,
+\cbs A qualified loc/id IRI can be specified\cbe as a special case of RFC 3987 (IRI,
 \cite{rfc3987}). Code-excerpt \ref{lst:loc-id-spec} on page
 \pageref{lst:loc-id-spec} contains this specification of qualified loc/ids in
 Augmented Backus-Naur Form (ABNF, \cite{rfc5234}).\cbs ABNF is used,\cbe because
