resolving issues with cross references after unifying abstract and concrete syntax merge

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -940,15 +940,15 @@ An abstract syntax specified as an SMOF compliant meta model.	&
 6.5.3(b)& 
 A human-readable lexical concrete syntax in EBNF and serialization in XML, for the latter XMI shall
 be used.	&
-The concrete syntax (in EBNF) is specified in clause \ref{a:text-syntax}. The XMI representation 
+The concrete syntax (in EBNF) is specified in clause \ref{c:abstract-syntax}. The XMI representation 
 is automatically derived from the SMOF meta model.
    \\ \hline
 %
 6.5.3(c)& 
 Complete round-trip mappings from the human-readable concrete syntax to the abstract syntax and
 vice versa.	&
-Both abstract syntax (clause \ref{c:abstract-syntax}) and concrete syntax (clause 
-\ref{a:text-syntax}) use the same non-terminal symbols
+Both abstract syntax and concrete syntax (clause 
+\ref{c:abstract-syntax}) use the same non-terminal symbols
 in their EBNF grammar; this makes a round-trip mapping between both straight-forward. Moreover, the 
 round-trip mapping has been implemented in form of a parser and a printer as part of the 
 heterogeneous tool set (see \url{http:hets.eu}).
@@ -2746,7 +2746,7 @@ The next three clauses are \emph{informative}. This clause provides some backgro
 \medskip \noindent 
 \cbs
 Clause \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) as an SMOF compliant meta model.\cbe
-Clause \ref{a:text-syntax} provides a human friendly text serialization of the abstract syntax of 
+Further, clause \ref{c:abstract-syntax} provides a human friendly text serialization of the abstract syntax of 
 \DOL (\emph{normative}). 
 \cbs
 Annex \ref{a:EBNF} contains the abstract syntax specified using Extended
@@ -2937,7 +2937,7 @@ between OMS as part of OMS networks in a semantically well-defined way. Thus, to
 \cbs
 Most of the following subsections are illustrated with sample \DOL
 libraries. These are always written in \DOL, see the \DOL Text
-Serialization in clause ~\ref{a:text-syntax}. Naturally, they also
+Serialization in clause ~\ref{c:abstract-syntax}. Naturally, they also
 contain parts written in different OMS languages (e.g.\ \OWL), the
 syntax of which is not described in this standard, but in other
 standard documents.
@@ -4020,7 +4020,7 @@ the rule for \syntax{combination} for the \cbs MOF metaclass \cbe
 %%%%%%%%%%%%%%%%%%%%
 
 
-\clause{\DOL  Syntax}\label{c:abstract-syntax}\label{a:text-syntax}
+\clause{\DOL  Syntax}\label{c:abstract-syntax}%\label{a:text-syntax}
 
 \cbs
 This clause specifies the \DOL abstract syntax as a MOF metamodel.
@@ -4271,9 +4271,7 @@ OMS language of the current OMS).
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\ssclause{Concrete Syntax}
-
-
+\ssclause{Concrete Syntax} \label{a:dol-text:OMS}
 
 
 While in most cases the translation from concrete to abstract syntax
@@ -5094,7 +5092,7 @@ The character set for the \DOL text serialization is the UTF-8 encoding of Unico
 
 \ssclause{Key words and signs}\label{c:keywords}
 
-The lexical symbols of the \DOL text serialization include various key words and signs that occur as terminal symbols in the context-free grammar in \aref{a:dol-text:concrete}.  Key words and signs that represent mathematical signs are displayed as such, when possible, and those signs that are available in the Unicode character set may also be used for input.
+The lexical symbols of the \DOL text serialization include various key words and signs that occur as terminal symbols in the context-free grammar in \aref{a:EBNF}.   Key words and signs that represent mathematical signs are displayed as such, when possible, and those signs that are available in the Unicode character set may also be used for input.
 
 \sssclause{Key words}
 
@@ -9615,7 +9613,7 @@ This annex provides example uses of \DOL constructs.  Jointly with
 \cref{c:goal}, which  contains \DOL examples for the
 usage scenarios, all \DOL constructs (although not necessarily all
 variants of each construct) are covered.  The examples follow the \DOL
-Text Serialization (\cref{a:text-syntax}). The following table
+Text Serialization (\cref{c:abstract-syntax}). The following table
 provides an overview of which \DOL language constructs have been 
 covered where.
 \cbe
