correted wrong nesting of cbs/cbe that causes extremly slow compilation

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1665,7 +1665,7 @@ be able to expand CURIEs into IRIs when requested.
   \url{http://www.w3.org/TR/2009/REC-owl2-profiles-20091027/}}
   \item{ISO/IEC 24707:2007} {Information technology – Common Logic (CL): a framework for a family of logic-based languages}
   \item{OMG Document ptc/2013-09-05:} {OMG Unified Modeling Language (OMG UML)\\
-  cbs\url{http://www.omg.org/spec/UML/Current}}\cbe
+  \cbs\url{http://www.omg.org/spec/UML/Current}}\cbe
   \item{IETF/RFC 3986} {Uniform Resource Identifier (URI): Generic Syntax. January 2005.\\ \url{http://tools.ietf.org/html/rfc3986}}
   \item{IETF/RFC 3987} {Internationalized Resource Identifiers (IRIs). January 2005.\\ \url{http://tools.ietf.org/html/rfc3987}}
   \item{IETF/RFC 5147} {URI Fragment Identifiers for the text/plain Media Type.  April 2008.\\ \url{http://tools.ietf.org/html/rfc5147}}
