switched off the slow changebars; fixed #220

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -41,8 +41,8 @@
  %
   % \newcommand{\cbs}[0]{\xspace}
   % \newcommand{\cbe}[0]{\xspace}
- \newcommand{\cbs}[0]{\cbstart{}\color{red}\xspace}
- \newcommand{\cbe}[0]{\cbend{}\color{black}\xspace}
+ \newcommand{\cbs}[0]{\color{red}\xspace} %\cbstart{}
+ \newcommand{\cbe}[0]{\color{black}\xspace} %\cbend{}
 
 
 \usepackage{pdflscape}
@@ -947,11 +947,11 @@ is automatically derived from the SMOF meta model.
 6.5.3(c)& 
 Complete round-trip mappings from the human-readable concrete syntax to the abstract syntax and
 vice versa.	&
-Both abstract syntax and concrete syntax (clause 
-\ref{c:abstract-syntax}) use the same non-terminal symbols
-in their EBNF grammar; this makes a round-trip mapping between both straight-forward. Moreover, the 
+\cbs The metaclasses of the MOF abstract syntax are used as non-terminals
+of the EBNF concrete syntax (clause 
+\ref{c:abstract-syntax});\cbe this makes a round-trip mapping between both straight-forward. Moreover, the 
 round-trip mapping has been implemented in form of a parser and a printer as part of the 
-heterogeneous tool set (see \url{http:hets.eu}).
+heterogeneous tool set \cbs (see appendix~\ref{a:tools} and \cbe \url{http:hets.eu}).
    \\ \hline
 %
 6.5.3(d)& 
@@ -2746,7 +2746,7 @@ The next three clauses are \emph{informative}. This clause provides some backgro
 \medskip \noindent 
 \cbs
 Clause \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) as an SMOF compliant meta model.\cbe
-Further, clause \ref{c:abstract-syntax} provides a human friendly text serialization of the abstract syntax of 
+Further, \cbs the same clause also\cbe provides a human friendly text serialization of the abstract syntax of 
 \DOL (\emph{normative}). 
 \cbs
 Annex \ref{a:EBNF} contains the abstract syntax specified using Extended
@@ -4047,7 +4047,7 @@ The \DOL document types are as follows
 
 \sclause{MOF Metaclasses}
 
-\DOL provides\cbs MOF metaclasses\cbe  for
+\DOL provides\cbs MOF metaclasses for (among others):\cbe   
 \begin{itemize}
 \item OMS (which can be native OMS in some OMS language, or unions, translations, \cbs closures\cbe, combinations, approximations of OMS, among others)
 \item OMS mappings 
@@ -4065,8 +4065,6 @@ subclasses of the \DOL metaclass \syntax{NativeDocument}.
 If a conforming OMS language has a metaclass for basic OMS,
 this is a subclass of the metaclass \syntax{BasicOMS}.\cbe
 
-\cbs The following subclauses, one per MOF metaclass, specify the abstract syntax of \DOL in MOF. Additionally, an informative EBNF specification
-is given in appendix~\ref{a:EBNF}.\cbe
 
 
 
