--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -148,6 +148,12 @@
   journal = {W3C Working Group Note, 27 October 2009.\newline \url{http://www.w3.org/TR/2009/NOTE-owl2-manchester-syntax-20091027/}},
   year = 2009,
 }
+@article{W3C:REC-owl2-xml-serialization-20121211,
+  author = {W3C OWL Working Group},
+  title = {OWL 2 Web Ontology Language: {XML} Serialization (Second Edition)},
+  journal = {W3C Recommendation, 11 December 2012.\newline \url{http://www.w3.org/TR/2012/REC-owl2-xml-serialization-20121211/}},
+  year = 2012,
+}
 @article{W3C:REC-owl2-rdf-based-semantics-20091027,
   author = {W3C OWL Working Group},
   title = {OWL 2 Web Ontology Language: RDF-Based Semantics},
